@@ -2,6 +2,7 @@
 v6.1.3-git
 ----------
 
+[jan] Fix link to setup browser for mailto: protocol.
 [mms] Fix some cases where the seesion was not destroyed upon authentication
       errors.
 [mms] Fix uploading attachments on Firefox 22+ in dynamic view.
